refactored CalculationService.java based on recommendations from IntelliJ IDEA